--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0",
-    "zip-webpack-plugin": "^3.0.0"
+    "webpack-parallel-uglify-plugin": "^1.1.0",
+    "zip-webpack-plugin": "2.0.0"
   },
   "engines": {
     "node": ">= 4.0.0",
